--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html></html>
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <h1 id="motivationalQuote"></h1>
     <button id="button"></button>
